--- a/bin/files/template.html
+++ b/bin/files/template.html
@@ -2,8 +2,18 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <title>$title$</title>
 </head>
 <body>
-<!-- DOCUMENT -->
+    <header>
+        <span>$created_time$</span>
+    </header>
+       $body$
+    <footer>
+        <p>created: $created_time$,
+                modified: $modified_time$,
+		keywords: $Keywords$</p>
+	<p>Copyright: $Copyright$</p>
+    </footer>
 </body>
 </html>
