--- a/bin/bsview/template.html
+++ b/bin/bsview/template.html
@@ -47,8 +47,8 @@ Content-type: text/html
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" id="full-search-box">
+	  <button class="btn btn-outline-success my-2 my-sm-0" type="button" onclick="fullSearch()">Search</button>
         </form>
       </div>
     </nav>
@@ -65,7 +65,7 @@ Content-type: text/html
       <!-- Example row of columns -->
       <!--3個col-md-4というclassの要素がある部分を書き換え-->
       <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-8" id="article-body">
 	  $body$
           <div class="card" id="article-info">
             <h4 class="card-header">Article Info</h4>
