Implement dropdown menu

--- a/bin/bsview/template.html
+++ b/bin/bsview/template.html
@@ -28,23 +28,21 @@ Content-type: text/html
 
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+          $for(links)$
+	    $if(links.sublinks)$
+          <li class="nav-item dropdown active">
+            <a class="nav-link dropdown-toggle" href="$links.href$" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">$links.text$</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
+              $for(links.sublinks)$
+              <a class="dropdown-item" href="$links.sublinks.href$">$links.sublinks.text$</a>
+              $endfor$
             </div>
+	    $else$
+          <li class="nav-item active">
+            <a class="nav-link" href="$links.href$">$links.text$</a>
           </li>
+	    $endif$
+          $endfor$
         </ul>
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" id="full-search-box">
