Add font awesome

--- a/bin/bsview/template.html
+++ b/bin/bsview/template.html
@@ -16,6 +16,9 @@ Content-type: text/html
 
     <!-- Custom styles for this template -->
     <link href="/bsview/jumbotron.css" rel="stylesheet">
+
+    <!-- Font Awesome -->
+    <script src="https://use.fontawesome.com/e908aae600.js"></script>
   </head>
 
   <body>
@@ -76,6 +79,19 @@ Content-type: text/html
           </div>
         </div>
 	<div class="col-md-4" id="widgets">
+          <aside id="social-links">
+            <h1>Social Links</h1>
+            <p>
+              <a href="https://twitter.com/ryuichiueda"><i class="fa fa-twitter-square fa-3x"></i></a>
+              <a href="https://www.youtube.com/user/ryuichiueda/videos"><i class="fa fa-youtube-square fa-3x"></i></a>
+              <a href="https://github.com/ryuichiueda"><i class="fa fa-github-square fa-3x"></i></a>
+              <a href="https://www.slideshare.net/ryuichiueda"><i class="fa fa-slideshare fa-3x"></i></a>
+              <a href="https://www.facebook.com/%E4%B8%8A%E7%94%B0-%E9%9A%86%E4%B8%80-675930229170437/"><i class="fa fa-facebook-square fa-3x"></i></a>
+              <a href="https://www.linkedin.com/in/%E9%9A%86%E4%B8%80-%E4%B8%8A%E7%94%B0-81391649"><i class="fa fa-linkedin-square fa-3x"></i></a>
+              <a href="https://www.instagram.com/ryuichiueda/"><i class="fa fa-instagram fa-3x"></i></a>
+              <a href="https://scholar.google.co.jp/citations?user=pv5dLkUAAAAJ"><i class="fa fa-graduation-cap fa-3x"></i></a>
+	    </p>
+	  </aside>
           <aside id="last-articles"></aside>
           <br />
           <aside id="rank-articles"></aside>
