--- a/bin/bsview/template.html
+++ b/bin/bsview/template.html
@@ -7,6 +7,11 @@ Content-type: text/html
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
+
+    <meta property="og:url"           content="$protocol$://$host$/?$page$" />
+    <meta property="og:type"          content="website" />
+    <meta property="og:title"         content="$title$" />
+
     <link rel="icon" href="../../../../favicon.ico">
 
     <title>$title$</title>
@@ -22,6 +27,14 @@ Content-type: text/html
   </head>
 
   <body>
+	  <div id="fb-root"></div>
+  <script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v2.10";
+	  fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));</script>
 
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
       <a class="navbar-brand" href="#">bashcms2ブログ</a>
@@ -67,6 +80,27 @@ Content-type: text/html
       <!--3個col-md-4というclassの要素がある部分を書き換え-->
       <div class="row">
         <div class="col-md-8" id="article-body">
+	    $if(twitter)$
+	    <a href="https://twitter.com/share" class="twitter-share-button" data-via="$twitter.account$">Tweet</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>&nbsp;
+	    $endif$
+
+	    $if(hatena)$
+	    <a href="http://b.hatena.ne.jp/entry/" class="hatena-bookmark-button" data-hatena-bookmark-layout="basic-label-counter" data-hatena-bookmark-lang="ja" title="このエントリーをはてなブックマークに追加"><img src="https://b.st-hatena.com/images/entry-button/button-only@2x.png" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a><script type="text/javascript" src="https://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>&nbsp;
+	    $endif$
+
+	    $if(facebook)$
+	    <div class="fb-like" data-href="$protocol$://$host$/?$page$" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>&nbsp;
+	    $endif$
+
+	    $if(line)$
+	    <div class="line-it-button" data-lang="ja" data-type="share-a" data-url="$protocol$://$host$/?$page$" style="display: none;"></div>
+	    <script src="https://d.line-scdn.net/r/web/social-plugin/js/thirdparty/loader.min.js" async="async" defer="defer"></script>&nbsp;
+	    $endif$
+
+	    $if(pocket)$
+	    <a data-pocket-label="pocket" data-pocket-count="horizontal" class="pocket-btn" data-lang="en"></a>
+	    <script type="text/javascript">!function(d,i){if(!d.getElementById(i)){var j=d.createElement("script");j.id=i;j.src="https://widgets.getpocket.com/v1/j/btn.js?v=1";var w=d.getElementById(i);d.body.appendChild(j);}}(document,"pocket-btn-js");</script>
+	    $endif$
 	  $body$
           <div class="card" id="article-info">
             <h4 class="card-header">Article Info</h4>
@@ -79,6 +113,12 @@ Content-type: text/html
           </div>
         </div>
 	<div class="col-md-4" id="widgets">
+	  $if(sociallinks)$
+	  <h1>Social Links</h1>
+	  $endif$
+          $for(sociallinks)$
+	  <a href="$sociallinks.href$"><i class="fa $sociallinks.icon$ fa-3x"></i></a>
+	  $endfor$
           <aside id="last-articles"></aside>
           <br />
           <aside id="rank-articles"></aside>
