--- a/bin/bsview/template.html
+++ b/bin/bsview/template.html
@@ -67,6 +67,18 @@ Content-type: text/html
       <!--3個col-md-4というclassの要素がある部分を書き換え-->
       <div class="row">
         <div class="col-md-8" id="article-body">
+	  $if(hatena)$
+	  <a href="http://b.hatena.ne.jp/entry/" class="hatena-bookmark-button" data-hatena-bookmark-layout="basic-label-counter" data-hatena-bookmark-lang="ja" title="このエントリーをはてなブックマークに追加"><img src="https://b.st-hatena.com/images/entry-button/button-only@2x.png" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a>
+	  <script type="text/javascript" src="https://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
+	  $endif$
+	  $if(twitter)$
+          <a href="https://twitter.com/share" class="twitter-share-button" data-via="$twitter$">Tweet</a>
+	  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+	  $endif$
+	  $if(line)$
+	  <div class="line-it-button" data-lang="ja" data-type="like" data-url="$protocol$$host$$page$" data-share="true" style="display: none;"></div>
+	   <script src="https://d.line-scdn.net/r/web/social-plugin/js/thirdparty/loader.min.js" async="async" defer="defer"></script>
+	  $endif$
 	  $body$
           <div class="card" id="article-info">
             <h4 class="card-header">Article Info</h4>
