--- a/bin/bsview/template.html
+++ b/bin/bsview/template.html
@@ -37,7 +37,7 @@ Content-type: text/html
   }(document, 'script', 'facebook-jssdk'));</script>
 
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="#">bashcms2ブログ</a>
+      <a class="navbar-brand" href="#">個人的な方の上田一ブログ</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -70,8 +70,8 @@ Content-type: text/html
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-	<h1>bashcms2ブログ</h1>
-	<p>Bootstrap便利ですね。</p>
+	<h1>個人的な方の上田ブログ</h1>
+	<p>某案件のため試験運用中</p>
       </div>
     </div>
 
