--- a/bin/bsview/template.html
+++ b/bin/bsview/template.html
@@ -115,7 +115,6 @@ Content-type: text/html
       <!--3個col-md-4というclassの要素がある部分を書き換え-->
       <div class="row">
         <div class="col-md-8" id="article-body">
-
 	    $if(twitter)$
 	    <a href="https://twitter.com/share" class="twitter-share-button" data-via="$twitter.account$">Tweet</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>&nbsp;
 	    $endif$
@@ -165,6 +164,12 @@ Content-type: text/html
           </div>
         </div>
 	<div class="col-md-4" id="widgets">
+          <aside>
+            <script src="https://apis.google.com/js/platform.js"></script>
+            <div class="g-ytsubscribe" data-channel="ryuichiueda" data-layout="full" data-count="default"></div>
+            <br />
+            <div class="g-ytsubscribe" data-channelid="UCNnuBjHrb2UYBUi0I5otmjQ" data-layout="full" data-count="default"></div>
+          </aside>
           $for(sociallinks)$
 	  <a href="$sociallinks.href$"><i class="fa $sociallinks.icon$ fa-3x"></i></a>
 	  $endfor$
