Add the link for privacy policy

--- a/bin/bsview/template.html
+++ b/bin/bsview/template.html
@@ -128,7 +128,7 @@ Content-type: text/html
       <hr>
 
       <footer>
-        <p>&copy; $Copyright$</p>
+	      <p>&copy; $Copyright$ <a href="/?page=privacy">このサイトについて</a></p>
       </footer>
     </div> <!-- /container -->
 
