--- a/bin/bsview/template.html
+++ b/bin/bsview/template.html
@@ -115,6 +115,11 @@ Content-type: text/html
       <!--3個col-md-4というclassの要素がある部分を書き換え-->
       <div class="row">
         <div class="col-md-8" id="article-body">
+          <p id="article-info">
+	  <strong style="font-size:120%">$created_time$</strong> (modified: $modified_time$)<br />
+	  views: $views$, keywords: <span id="keywords">$Keywords$</span>
+          </p>
+	  <div id="social-buttons">
 	    $if(twitter)$
 	    <a href="https://twitter.com/share" class="twitter-share-button" data-via="$twitter.account$">Tweet</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>&nbsp;
 	    $endif$
@@ -133,9 +138,10 @@ Content-type: text/html
 	    $endif$
 
 	    $if(pocket)$
-	    <a data-pocket-label="pocket" data-pocket-count="horizontal" class="pocket-btn" data-lang="en"></a>
+	    <a style="white-space: nowrap" data-pocket-label="pocket" data-pocket-count="horizontal" class="pocket-btn" data-lang="en"></a>
 	    <script type="text/javascript">!function(d,i){if(!d.getElementById(i)){var j=d.createElement("script");j.id=i;j.src="https://widgets.getpocket.com/v1/j/btn.js?v=1";var w=d.getElementById(i);d.body.appendChild(j);}}(document,"pocket-btn-js");</script>
 	    $endif$
+	  </div>
 	  $body$
 
           <br />
@@ -153,21 +159,17 @@ Content-type: text/html
           <!-- google ad -->
 
           <br />
+	  <p id="prev-next-nav">$nav$</p>
         </div>
 	<div class="col-md-4" id="widgets">
-            <h1>記事の情報</h1>
-            <p style="padding:5px">created: $created_time$<br />
-              modified: $modified_time$<br />
-              views: $views$<br />
-              keywords: <span id="keywords">$Keywords$</span></br>
-              $nav$
-            </p>
           <aside>
             <h1>Who???</h1>
             <script src="https://apis.google.com/js/platform.js"></script>
             <div class="g-ytsubscribe" data-channel="ryuichiueda" data-layout="full" data-count="default"></div>
             <div class="g-ytsubscribe" data-channelid="UCNnuBjHrb2UYBUi0I5otmjQ" data-layout="full" data-count="default"></div>
             <br />
+          </aside>
+          <aside>
             $for(sociallinks)$
 	    <a href="$sociallinks.href$"><i class="fa $sociallinks.icon$ fa-3x"></i></a>
 	    $endfor$
