Change to the bootstrap version

--- a/bin/bsview/template.html
+++ b/bin/bsview/template.html
@@ -148,6 +148,8 @@ Content-type: text/html
         <aside id="last-articles"></aside>
         <br />
         <aside id="rank-articles"></aside>
+        <br />
+	<aside id="tag-cloud"></aside>
       </div>
     </div>
   
