Add tagcloud by @sickleaf3

--- a/bin/bsview/template.html
+++ b/bin/bsview/template.html
@@ -175,6 +175,8 @@ Content-type: text/html
 	    $endfor$
           </aside>
           <br />
+          <aside id="tag-cloud"></aside>
+          <br />
           <aside id="last-articles"></aside>
           <br />
           <aside id="rank-articles"></aside>
