--- a/bin/bsview/template.html
+++ b/bin/bsview/template.html
@@ -77,7 +77,7 @@ Content-type: text/html
     <div class="jumbotron">
       <div class="container">
         <div class="row">
-          <div class="col-md-8">
+          <div class="col-md-12">
             <h1>$sitetitle$</h1>
             <p>$subtitle$</p>
             $if(headline)$
@@ -127,23 +127,31 @@ Content-type: text/html
         </div>
 	<div class="col-md-4" id="widgets">
           <aside>
-            $for(sociallinks)$
-	    <a href="$sociallinks.href$"><i class="fa $sociallinks.icon$ fa-3x"></i></a>
-	    $endfor$
-          </aside>
-          <br />
+	    <h1>研究室概要</h1>
+	    <ul>
+              <li>所属: <a style="font-size:100%" href="https://www.robotics.it-chiba.ac.jp/j/">千葉工業大学先進工学部未来ロボティクス学科</a></li>
+              <li>主宰: <a style="font-size:100%" href="https://ja.wikipedia.org/wiki/%E4%B8%8A%E7%94%B0%E9%9A%86%E4%B8%80">上田隆一</a></li>
+              <li>研究内容: <a style="font-size:100%" href="/?page=publication">文献リスト</a></li>
+	    </ul>
+	  </aside>
           <aside id="tag-cloud"></aside>
           <br />
           <aside id="last-articles"></aside>
           <br />
           <aside id="rank-articles"></aside>
+          <br />
+          <aside>
+            $for(sociallinks)$
+	    <a href="$sociallinks.href$"><i class="fa $sociallinks.icon$ fa-3x"></i></a>
+	    $endfor$
+          </aside>
         </div>
       </div>
 
       <hr>
 
       <footer>
-        <p>$Copyright$ <a href="/?page=privacy">このサイトについて</a></p>
+        <p>$Copyright$</p>
       </footer>
     </div> <!-- /container -->
 
