--- a/bin/bsview/template.html
+++ b/bin/bsview/template.html
@@ -91,7 +91,7 @@ Content-type: text/html
             <h1>$sitetitle$</h1>
             <p>$subtitle$</p>
             $if(headline)$
-            <p>お知らせ: $for(headline)$ <span>$headline.text$&nbsp;/&nbsp;</span> $endfor$ </p>
+            <p>info: $for(headline)$ <span>$headline.text$&nbsp;/&nbsp;</span> $endfor$ </p>
             $endif$
           </div>
           <div class="col-md-4">
@@ -186,7 +186,7 @@ Content-type: text/html
       <hr>
 
       <footer>
-        <p>$Copyright$ <a href="/?page=privacy">このサイトについて</a></p>
+	      <p>$Copyright$</p>
       </footer>
     </div> <!-- /container -->
 
