--- a/bin/bsview/template.html
+++ b/bin/bsview/template.html
@@ -53,7 +53,7 @@ Content-type: text/html
   }(document, 'script', 'facebook-jssdk'));</script>
 
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="/">R.Ueda blog</a>
+      <a class="navbar-brand" href="/">Ryuichi Ueda's site</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
