--- a/bin/bsview/template.html
+++ b/bin/bsview/template.html
@@ -179,11 +179,18 @@ Content-type: text/html
           <br />
           <aside id="rank-articles"></aside>
         </div>
-        <div class="row fixed-bottom" >
+	<div class="row fixed-bottom">
           <div class="col-md-8">
           </div>
           <div class="col-md-4" id="toc">
-            $table-of-contents$
+            <div class="card">
+              <div class="card-header">
+		<a class="btn btn-success" data-toggle="collapse" href="#tocbody" role="button" aria-expanded="true" aria-controls="tocbody">この記事の目次</a>
+              </div>
+              <div class="card-body collapse" id="tocbody">
+                $table-of-contents$
+              </div>
+            </div>
           </div>
         </div>
       </div>
