Add cookie confirm

--- a/bin/bsview/template.html
+++ b/bin/bsview/template.html
@@ -150,6 +150,18 @@ Content-type: text/html
         <aside id="rank-articles"></aside>
       </div>
     </div>
+    <div class="row fixed-bottom" id="cookiemention">
+      <div class="col-md-12">
+        <div class="card">
+          <div class="card-body">
+		  （This is a test.）<br />
+		 このサイトでは広告の設定やアクセス解析（Google AdSense, Google Analytics）のために（という理由もありますがbashで書かれた本ページの限界を追求するために）Cookieを使用しています。もし同意いただけない場合はブラウザでクッキーを無効にして閲覧するか、ブラウザのxボタンでページを閉じてください。<br />This site uses cookies for advertising, access analysis, and experiments for this bash based web site. If you cannot accept our use of cookies, please disable cookies on your browser, or please close this page with x button on the tab or window.
+            <br />
+            <button type="button" class="btn btn-primary" id="cookieok">Got It.</button>
+          </div>
+        </div>
+      </div>
+    </div>
   
     <hr>
   
