Implement cookie confirmation without lib

--- a/bin/bsview/template.html
+++ b/bin/bsview/template.html
@@ -183,22 +183,16 @@ Content-type: text/html
           <br />
           <aside id="rank-articles"></aside>
         </div>
-	<!--
-	<div class="row fixed-bottom">
-          <div class="col-md-8">
-          </div>
-          <div class="col-md-4" id="toc">
-            <div class="card">
-              <div class="card-header">
-		<a class="btn btn-success" data-toggle="collapse" href="#tocbody" role="button" aria-expanded="true" aria-controls="tocbody">この記事の目次</a>
-              </div>
-              <div class="card-body collapse" id="tocbody">
-                $table-of-contents$
-              </div>
+      </div>
+      <div class="row fixed-bottom" id="cookiemention">
+        <div class="col-md-12">
+          <div class="card">
+            <div class="card-body">
+		    このサイトでは広告の設定やアクセス解析（Google AdSense, Google Analytics）のために（という理由もありますがbashで書かれた本ページの限界を追求するために）Cookieを使用しています。もし同意いただけない場合はブラウザでクッキーを無効にして閲覧するか、ブラウザのxボタンでページを閉じてください。This site uses cookies for advertising, access analysis, and experiments for this bash based web site. If you cannot accept our use of cookies, please disable cookies on your browser, or please close this page with x button on the tab or window. 
+              <button type="button" class="btn btn-primary btn-sm" id="cookieok">Got It.</button>
             </div>
           </div>
         </div>
-	-->
       </div>
 
       <hr>
