--- a/bin/bsview/template.html
+++ b/bin/bsview/template.html
@@ -6,11 +6,13 @@ Content-type: text/html
     <!-- Global Site Tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-39565206-5"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments)};
-      gtag('js', new Date());
-    
-      gtag('config', 'UA-39565206-5');
+      if(document.cookie.indexOf("cookieconfirm=ok") > 0){
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments)};
+        gtag('js', new Date());
+      
+        gtag('config', 'UA-39565206-5');
+      }
     </script>
 
     <meta charset="utf-8">
@@ -188,8 +190,9 @@ Content-type: text/html
         <div class="col-md-12">
           <div class="card">
             <div class="card-body">
-		    このサイトでは広告の設定やアクセス解析（Google AdSense, Google Analytics）のために（という理由もありますがbashで書かれた本ページの限界を追求するために）Cookieを使用しています。もし同意いただけない場合はブラウザでクッキーを無効にして閲覧するか、ブラウザのxボタンでページを閉じてください。This site uses cookies for advertising, access analysis, and experiments for this bash based web site. If you cannot accept our use of cookies, please disable cookies on your browser, or please close this page with x button on the tab or window. 
-              <button type="button" class="btn btn-primary btn-sm" id="cookieok">Got It.</button>
+		    このサイトでは広告の設定やアクセス解析（Google AdSense, Google Analytics）のために（という理由もありますがbashで書かれた本ページの限界を追求するために）Cookieを使用しています。もし同意いただけない場合はブラウザでクッキーを無効にして閲覧するか、ブラウザのxボタンでページを閉じてください。（NGボタンはテスト中です。）This site uses cookies for advertising, access analysis, and experiments for this bash based web site. If you cannot accept our use of cookies, please disable cookies on your browser, or please close this page with x button on the tab or window. ("NG" button is on the test.)
+              <button type="button" class="btn btn-success btn-sm" id="cookieok">Got It.</button>
+              <button type="button" class="btn btn-warning btn-sm" id="cookieng">NG</button>
             </div>
           </div>
         </div>
