Fix various things

--- a/bin/bsview/template.html
+++ b/bin/bsview/template.html
@@ -179,6 +179,8 @@ Content-type: text/html
 	    $endfor$
           </aside>
           <br />
+          <aside id="last-read"></aside>
+          <br />
           <aside id="tag-cloud"></aside>
           <br />
           <aside id="last-articles"></aside>
