--- a/bin/bsview/template.html
+++ b/bin/bsview/template.html
@@ -42,6 +42,8 @@ Content-type: text/html
     <link href="/bsview/jumbotron.css" rel="stylesheet">
 
     <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+
+    <script data-ad-client="ca-pub-7242808947152948" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </head>
 
   <body>
