--- a/bin/bsview/template.html
+++ b/bin/bsview/template.html
@@ -56,7 +56,7 @@ Content-type: text/html
 	  fjs.parentNode.insertBefore(js, fjs);
   }(document, 'script', 'facebook-jssdk'));</script>
 
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" id="navbar">
       <a class="navbar-brand" href="/">Ryuichi Ueda's site</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -88,7 +88,7 @@ Content-type: text/html
     </nav>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
+    <div class="jumbotron" id="jumbotron">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -116,7 +116,7 @@ Content-type: text/html
       </div>
     </div>
 
-    <div class="container">
+    <div class="container" id="container">
       <div class="row">
         <div class="col-md-8" id="article-body">
           <p id="article-info">
