--- a/bin/bsview/template.html
+++ b/bin/bsview/template.html
@@ -6,13 +6,13 @@ Content-type: text/html
     <!-- Global Site Tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-39565206-5"></script>
     <script>
-      if(document.cookie.indexOf("cookieconfirm=ok") > 0){
+     // if(document.cookie.indexOf("cookieconfirm=ok") > 0){
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments)};
         gtag('js', new Date());
       
         gtag('config', 'UA-39565206-5');
-      }
+     // }
     </script>
 
     <meta charset="utf-8">
