--- a/bin/bsview/template.html
+++ b/bin/bsview/template.html
@@ -3,7 +3,6 @@ Content-type: text/html
 <!DOCTYPE html>
 <html lang="ja">
   <head>
-    <!--
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -13,7 +12,6 @@ Content-type: text/html
     ga('create', 'UA-39565206-5', 'auto');
     ga('send', 'pageview');
     </script>
-    -->
 
     <!-- 
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-39565206-5"></script>
@@ -206,18 +204,16 @@ Content-type: text/html
           <aside id="rank-articles"></aside>
         </div>
       </div>
-      <!--
       <div class="row fixed-bottom" id="cookiemention">
         <div class="col-md-12">
           <div class="card">
             <div class="card-body">
-		    このサイトではGoogle AdSenseやその他ソーシャルボタンのためにCookieを使用しています。もし同意いただけない場合はブラウザでクッキーを無効にして閲覧をお願いします。This site uses cookies for Google AdSense and some social buttons. If you cannot accept our use of cookies, please disable cookies on your browser.
+		    このサイトではGoogle Analyticsやその他ソーシャルボタンのためにCookieを使用しています。もし同意いただけない場合はブラウザでクッキーを無効にして閲覧をお願いします。This site uses cookies for Google AdSense and some social buttons. If you cannot accept our use of cookies, please disable cookies on your browser.
               <button type="button" class="btn btn-success btn-sm" id="cookieok">Got It.</button>
             </div>
           </div>
         </div>
       </div>
-      -->
 
       <hr>
 
