--- a/bin/bsview/template.html
+++ b/bin/bsview/template.html
@@ -34,7 +34,8 @@ Content-type: text/html
     <meta property="og:url"           content="$protocol$//$host$/?$page$" />
     <meta property="og:type"          content="website" />
     <meta property="og:title"         content="$title$ | $sitetitle$" />
-
+    <meta property="og:image"         content="https://b.ueda.tech/pages/top/cat1.jpg" />
+    
     <link rel="icon" href="favicon.ico">
 
     <title>$title$ | $sitetitle$</title>
