--- a/bin/bsview/template.html
+++ b/bin/bsview/template.html
@@ -196,147 +196,25 @@ Content-type: text/html
 	    $endfor$
           </aside>
           <br />
-	  <div class="card mb-3">
-		  
-		  <aside>
-  <div class="row no-gutters">
-    <div class="col-md-4">
-        <a href="/?page=news"><img class="card-img-top" src="/pages/top/ueda.jpg" alt="my face"></a>
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">お知らせ</h5>
-        <p class="card-text">ニュースや報告、自己紹介</p>
-        <!--<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>-->
-      </div>
-    </div>
-  </div>
-</div>
-<div class="card mb-3">
-  <div class="row no-gutters">
-    <div class="col-md-4">
-        <a href="https://lab.ueda.tech/"><img class="card-img-top" src="/pages/top/lab.jpg" alt="lab"></a>
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">研究室 <i class="fa fa-external-link"></i></h5>
-        <p class="card-text">学生、上田の研究やその他活動について</p>
-        <!--<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>-->
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="card mb-3">
-  <div class="row no-gutters">
-    <div class="col-md-4">
-        <a href="/?page=lnpr"><img class="card-img-top" src="/pages/top/lnpr.jpg" alt="prob robot"></a>
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">詳解確率ロボティクス</h5>
-        <p class="card-text">書籍、動画、コードの情報</p>
-        <!--<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>-->
-      </div>
-    </div>
-  </div>
-</div>
-<div class="card mb-3">
-  <div class="row no-gutters">
-    <div class="col-md-4">
-        <a href="/?page=01434"><img class="card-img-top" src="/pages/top/shellgei.png" alt="shellgei image"></a>
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">シェル芸</h5>
-        <p class="card-text">過去問、過去のビデオ、書籍など</p>
-        <!--<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>-->
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="card mb-3">
-  <div class="row no-gutters">
-    <div class="col-md-4">
-        <a href="https://www.youtube.com/channel/UCJlHv03KKtVeUyRjHlW6sMg" target="blank"><img class="card-img-top" src="/pages/top/blackbd.jpg" alt="black board"></a>
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">YouTubeの個人チャンネル <i class="fa fa-external-link"></i></h5>
-        <p class="card-text">講義やロボットのデモ動画</p>
-        <!--<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>-->
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="card mb-3">
-  <div class="row no-gutters">
-    <div class="col-md-4">
-        <a href="/?page=opy"><img class="card-img-top" src="/pages/top/opy.png" alt="opy"></a>
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">opy</h5>
-        <p class="card-text">Pythonワンライナーコマンドopyの紹介と使い方</a>
-        <!--<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>-->
-      </div>
-    </div>
-  </div>
-</div>
-
-
-<div class="card mb-3">
-  <div class="row no-gutters">
-    <div class="col-md-4">
-        <a href="/?page=bashcms2"><img class="card-img-top" src="/pages/top/bashcms2.png" alt="bashcms2 book"></a>
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">bashcms2</h5>
-        <p class="card-text">このサイト（bash製）やシェルスクリプト高速開発手法入門 改訂2版などについて。</p>
-        <!--<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>-->
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="card mb-3">
-  <div class="row no-gutters">
-    <div class="col-md-4">
-        <a href="/?page=09461"><img class="card-img-top" src="/pages/top/rosrobot.png" alt="ROS Robot"></a>
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">Raspberry Piで学ぶ ROSロボット入門</h5>
-        <p class="card-text">ROSの入門書</p>
-        <!--<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>-->
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="card mb-3">
-  <div class="row no-gutters">
-    <div class="col-md-4">
-        <a href="/?page=GlueLang"><img class="card-img-top" src="/pages/top/glue.png" alt="GlueLang"></a>
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">GlueLang</h5>
-        <p class="card-text">スクリプティング用シェル</a>
-        <!--<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>-->
-      </div>
-    </div>
-  </div>
-</div>
-
-
-
-
-		  </aside>
-
+          <aside>
+            $if(sidecards)$
+	    $for(sidecards)$
+	    <div class="card mb-3">
+              <div class="row no-gutters">
+                <div class="col-md-4">
+                  <a href="$sidecards.href$"><img class="card-img-top" src="$sidecards.image$" alt="my face"></a>
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">$sidecards.title$</h5>
+                    <p class="card-text">$sidecards.text$</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+	    $endfor$
+            $endif$
+          </aside>
           <aside id="last-read"></aside>
           <br />
           <aside id="tag-cloud"></aside>
