Change top page output routine

--- a/bin/bsview/template.html
+++ b/bin/bsview/template.html
@@ -11,6 +11,7 @@ Content-type: text/html
     
     ga('create', 'UA-39565206-5', 'auto');
     ga('send', 'pageview');
+
     </script>
 
     <!-- 
@@ -36,7 +37,7 @@ Content-type: text/html
     <meta property="og:title"         content="$title$ | $sitetitle$" />
     <meta property="og:image"         content="https://b.ueda.tech/pages/top/cat1.jpg" />
     
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="$favicon$" />
 
     <title>$title$ | $sitetitle$</title>
 
@@ -54,9 +55,8 @@ Content-type: text/html
     <link href="/bsview/jumbotron.css" rel="stylesheet">
 
     <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML"></script>
-
     <!--
-    <script data-ad-client="ca-pub-7242808947152948" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7242808947152948" crossorigin="anonymous"></script>
     -->
   </head>
 
