--- a/bin/bsview/template.html
+++ b/bin/bsview/template.html
@@ -3,16 +3,6 @@ Content-type: text/html
 <!DOCTYPE html>
 <html lang="ja">
   <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-39565206-5"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-    
-      gtag('config', 'UA-39565206-5');
-    </script>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -102,20 +92,6 @@ Content-type: text/html
 	    $endfor$
 	    </p>
           </div>
-	  <!--
-          <div class="col-md-4">
-            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-            <ins class="adsbygoogle"
-                 style="display:block"
-                 data-ad-format="fluid"
-                 data-ad-layout-key="-go-p+33-1k-4o"
-                 data-ad-client="ca-pub-7242808947152948"
-                 data-ad-slot="2637185830"></ins>
-            <script>
-                 (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
-          </div>
-	  -->
         </div>
       </div>
     </div>
@@ -128,6 +104,9 @@ Content-type: text/html
 	  views: $views$, keywords: <span id="keywords">$Keywords$</span>
           </p>
 	  <div id="social-buttons">
+	    $if(misskey)$
+	    <a class="btn text-white" href="https://misskeyshare.link/share.html?text=" style="background-color: #2b90d9;" onclick="window.open(this.href+encodeURI(decodeURI(document.title))+'&url='+encodeURI(decodeURI(location.href)), '', 'width=500,height=400'); return false;"><img src="https://misskeyshare.link/image/mi.webp" style="width: 1em;"> ノート</a>
+	    $endif$
 	    $if(twitter)$
 	    <a href="https://twitter.com/share" class="twitter-share-button" data-via="$twitter.account$">Tweet</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>&nbsp;
 	    $endif$
@@ -136,13 +115,13 @@ Content-type: text/html
 	    <a href="http://b.hatena.ne.jp/entry/" class="hatena-bookmark-button" data-hatena-bookmark-layout="basic-label-counter" data-hatena-bookmark-lang="ja" title="このエントリーをはてなブックマークに追加"><img src="https://b.st-hatena.com/images/entry-button/button-only@2x.png" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a><script type="text/javascript" src="https://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>&nbsp;
 	    $endif$
 
-	    $if(facebook)$
-	    <div class="fb-like" data-href="$protocol$//$host$/?$page$" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>&nbsp;
-	    $endif$
-
 	    $if(line)$
 	    <div class="line-it-button" data-lang="ja" data-type="share-a" data-url="$protocol$//$host$/?$page$" style="display: none;"></div>
 	    <script src="https://d.line-scdn.net/r/web/social-plugin/js/thirdparty/loader.min.js" async="async" defer="defer"></script>&nbsp;
+	    $endif$
+
+	    $if(facebook)$
+	    <div class="fb-like" data-href="$protocol$//$host$/?$page$" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>&nbsp;
 	    $endif$
 
 	    $if(pocket)$
@@ -200,7 +179,7 @@ Content-type: text/html
 	    $endfor$
             $endif$
           </aside>
-	  <h2 id="articles">記事いろいろ</h2>
+	  <h2 id="activity">記事いろいろ</h2>
           <aside id="last-read"></aside>
           <br />
           <aside id="tag-cloud"></aside>
