--- a/bin/bsview/template.html
+++ b/bin/bsview/template.html
@@ -31,9 +31,9 @@ Content-type: text/html
     <link href="/bsview/jumbotron.css" rel="stylesheet">
 
     <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML"></script>
-    <!--
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7242808947152948" crossorigin="anonymous"></script>
-    -->
+    
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7242808947152948"
+     crossorigin="anonymous"></script>
   </head>
 
   <body>
