--- a/bin/bsview/template.html
+++ b/bin/bsview/template.html
@@ -102,20 +102,6 @@ Content-type: text/html
 	    $endfor$
 	    </p>
           </div>
-	  <!--
-          <div class="col-md-4">
-            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7242808947152948" crossorigin="anonymous"></script>
-            <ins class="adsbygoogle"
-              style="display:block"
-              data-ad-client="ca-pub-7242808947152948"
-              data-ad-slot="1700080238"
-              data-ad-format="auto"
-              data-full-width-responsive="true"></ins>
-            <script>
-              (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
-          </div>
-	  -->
         </div>
       </div>
     </div>
@@ -164,6 +150,18 @@ Content-type: text/html
 	  <p id="prev-next-nav">$nav$</p>
         </div>
 	<div class="col-md-4" id="widgets">
+          <aside>
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7242808947152948" crossorigin="anonymous"></script>
+            <ins class="adsbygoogle"
+              style="display:block"
+              data-ad-client="ca-pub-7242808947152948"
+              data-ad-slot="1700080238"
+              data-ad-format="auto"
+              data-full-width-responsive="true"></ins>
+            <script>
+              (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+          </aside>
 	  <h2 id="activity">やり散らかし一覧</h2>
           <aside>
             <script src="https://apis.google.com/js/platform.js"></script>
@@ -200,6 +198,7 @@ Content-type: text/html
           <aside id="rank-articles"></aside>
         </div>
       </div>
+      <!--
       <div class="row fixed-bottom" id="cookiemention">
         <div class="col-md-12">
           <div class="card">
@@ -210,6 +209,7 @@ Content-type: text/html
           </div>
         </div>
       </div>
+      -->
 
       <hr>
 
