Change column size

--- a/bin/bsview/template.html
+++ b/bin/bsview/template.html
@@ -91,7 +91,7 @@ Content-type: text/html
     <div class="jumbotron" id="jumbotron">
       <div class="container">
         <div class="row">
-          <div class="col-md-12">
+          <div class="col-md-10">
             <h1>$sitetitle$</h1>
             <p>$subtitle$</p>
             $if(headline)$
@@ -101,6 +101,8 @@ Content-type: text/html
 	    <a href="$sociallinks.href$"><i class="fa $sociallinks.icon$"></i></a>
 	    $endfor$
 	    </p>
+          </div>
+          <div class="col-md-2">
           </div>
         </div>
       </div>
